--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,30 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>simpleimage</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.media</groupId>
+			<artifactId>jai_core</artifactId>
+			<version>1.1.3</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/lib/jai_core.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>javax.media</groupId>
+			<artifactId>jai_codec</artifactId>
+			<version>1.1.3</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/lib/jai_codec.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 </project>
